--- a/config/roles/prerequisites.yaml
+++ b/config/roles/prerequisites.yaml
@@ -3,3 +3,5 @@ source_directory: "spec/infra/prerequisites"
 state_file: "%{hiera('project_directory')}/state/prerequisites.tfstate"
 vars:
   region: "%{hiera('region')}"
+
+  deployment_identifier: "%{hiera('deployment_identifier')}"
