Tests now run on dependabot branches [skip ci]

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ workflows:
       - test:
           filters:
             branches:
-              only: master
+              only: [master, /^dependabot.*/]
       - prerelease:
           requires:
             - test
