--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
     steps:
       - checkout
       - run: ./scripts/ci/common/install-git-crypt.sh
+      - run: ./scripts/ci/common/install-orb-deps.sh
       - queue/until_front_of_line
       - run: ./scripts/ci/steps/test.sh
   prerelease:
