--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,8 @@ jobs:
       - checkout
       - run: ./scripts/ci/common/install-git-crypt.sh
       - run: ./scripts/ci/common/install-orb-deps.sh
-      - queue/until_front_of_line
+      - queue/until_front_of_line:
+          consider-branch: false
       - run: ./scripts/ci/steps/test.sh
   prerelease:
     working_directory: ~/terraform-aws-account-defaults
