--- a/config/defaults.yaml
+++ b/config/defaults.yaml
@@ -2,6 +2,7 @@
 region: 'eu-west-2'
 
 component: 'test'
+deployment_identifier: "%{hiera('seed')}"
 
-work_directory: 'build'
-configuration_directory: "%{hiera('work_directory')}/%{hiera('source_directory')}"
+user_public_gpg_key_path: "%{cwd}/config/secrets/user/gpg.public"
+user_private_gpg_key_path: "%{cwd}/config/secrets/user/gpg.private"
